[feat] several feats to 800 chair

--- a/src/components/FirstSection.astro
+++ b/src/components/FirstSection.astro
@@ -1,5 +1,5 @@
 ---
-import LongSection from './LongSection.astro';
+import LongSection from "./LongSection.astro";
 ---
 
 <LongSection
@@ -17,18 +17,18 @@ import LongSection from './LongSection.astro';
       class="flex flex-col lg:flex-row justify-around gap-12 xl:gap-40 pt-10 pb-24 xl:pt-8 pb:4 lg:mb-24"
     >
       <img
-        src="/pcch375/pcch3752.webp"
-        alt="Foto lateral de la PCCH375"
+        src="lateral.png"
+        alt="Foto lateral de la PCCH800TRGB"
         class="w-[26rem] object-contain"
       />
       <img
-        src="/pcch375/pcch375.webp"
-        alt="Foto frontal de la PCCH375"
+        src="frontal.png"
+        alt="Foto frontal de la PCCH800TRGB"
         class="w-[32rem] object-contain"
       />
       <img
-        src="/pcch375/back375.webp"
-        alt="Foto frontal de la PCCH375"
+        src="trasera.png"
+        alt="Foto trasera de la PCCH800TRGB"
         class="w-[30rem] object-contain"
       />
     </div>
