--- a/src/components/FourthSection.astro
+++ b/src/components/FourthSection.astro
@@ -1,5 +1,5 @@
 ---
-import LongSection from './LongSection.astro';
+import LongSection from "./LongSection.astro";
 ---
 
 <LongSection
@@ -17,19 +17,16 @@ import LongSection from './LongSection.astro';
     <div
       class="flex flex-col md:flex-row items-center justify-center pl-5 py-5 md:hidden"
     >
-      <a href="/pcch375/pcch375guide.pdf" target="_blank" class="md:order-2">
-        <img src="/pcch375/guidemobile1.png" class="w-11/12 rounded-xl" />
-      </a>
-      <a href="/pcch375/pcch375guide.pdf" target="_blank" class="md:order-1">
-        <img src="/pcch375/guidemobile2.png" class="w-11/12 rounded-xl" />
+      <a href="fichaproducto.pdf" target="_blank" class="md:order-2">
+        <img src="fichaproducto.png" class="w-11/12 rounded-xl" />
       </a>
     </div>
 
     <div
       class="hidden md:flex flex-col md:flex-row items-center justify-center md:justify-around md:pl-0 py-5 md:py-2"
     >
-      <a href="/pcch375/pcch375guide.pdf" target="_blank">
-        <img src="/pcch375/fichaproducto.png" class="w-11/12 rounded-xl" />
+      <a href="fichaproducto.pdf" target="_blank">
+        <img src="fichaproducto.png" class="w-11/12 rounded-xl" />
       </a>
     </div>
   </article>
