--- a/src/components/SecondSection.astro
+++ b/src/components/SecondSection.astro
@@ -32,7 +32,7 @@ import LongSection from './LongSection.astro';
         autoplay
         muted
         playsinline
-        src="/pcch375/bullets.mp4"
+        src="bullets.mp4"
         class="hidden md:block rounded-2xl md:w-[90%] lg:w-[50%] object-center object-cover w-screen h-10/12"
       ></video>
 
@@ -41,7 +41,7 @@ import LongSection from './LongSection.astro';
         autoplay
         muted
         playsinline
-        src="/pcch375/bulletsm.mp4"
+        src="bulletsm.mp4"
         class="md:hidden rounded-3xl mb-4 py-2 h-[500px] pt-8"></video>
     </div>
   </article>
