--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import HeroSection from '../components/HeroSection.astro';
-import FirstSection from '../components/FirstSection.astro';
-import SecondSection from '../components/SecondSection.astro';
-import ThirdSection from '../components/ThirdSection.astro';
-import BuySection from '../components/BuySection.astro';
-import FirstVideo from '../components/FirstVideo.astro';
-import SecondGeneralDemo from '../components/SecondGeneralDemo.astro';
-import FourthSection from '../components/FourthSection.astro';
-import Specifications from '../components/Specifications.astro';
+import Layout from "../layouts/Layout.astro";
+import HeroSection from "../components/HeroSection.astro";
+import FirstSection from "../components/FirstSection.astro";
+import SecondSection from "../components/SecondSection.astro";
+import ThirdSection from "../components/ThirdSection.astro";
+import BuySection from "../components/BuySection.astro";
+import FirstVideo from "../components/FirstVideo.astro";
+import SecondGeneralDemo from "../components/SecondGeneralDemo.astro";
+import FourthSection from "../components/FourthSection.astro";
+import Specifications from "../components/Specifications.astro";
 ---
 
 <Layout title="NAC-PCCH-375">
@@ -21,15 +21,15 @@ import Specifications from '../components/Specifications.astro';
     <div class="lg:snap-center">
       <FirstSection />
     </div>
-    <div class="lg:snap-center">
+    <!-- <div class="lg:snap-center">
       <SecondSection />
-    </div>
-    <div class="lg:snap-center">
+    </div> -->
+    <!-- <div class="lg:snap-center">
       <ThirdSection />
-    </div>
-    <div class="lg:snap-center">
+    </div> -->
+    <!-- <div class="lg:snap-center">
       <FirstVideo />
-    </div>
+    </div> -->
     <div class="lg:snap-center">
       <SecondGeneralDemo />
     </div>
