--- a/src/components/BuySection.astro
+++ b/src/components/BuySection.astro
@@ -1,10 +1,10 @@
 ---
-import LongSection from './LongSection.astro';
-import { buySectionData, productData } from '../data/buy_section';
+import LongSection from "./LongSection.astro";
+import { buySectionData, productData } from "../data/buy_section";
 ---
 
 <LongSection
-  title="NACON PCCH-375"
+  title="NACON PCCH-800 TRGB"
   color="white"
   pt="pt-5"
   textSize="text-[40px]"
@@ -23,7 +23,7 @@ import { buySectionData, productData } from '../data/buy_section';
             <img
               src={product.imgSrc}
               alt={product.title}
-              class="w-[25.6rem] pr-5"
+              class="w-[40.6rem] pr-5"
             />
             {/* <div class="flex flex-row gap-3 md:gap-5 items-center justify-center">
               {product.buySectionStores.map((store) => (
@@ -47,36 +47,32 @@ import { buySectionData, productData } from '../data/buy_section';
           href="https://www.facebook.com/Nacongaming/?brand_redir=618785068327460"
           target="_blank"
         >
-          <img src="/pcch375/facebook.svg" alt="Facebook" class="w-8 md:w-10" />
+          <img src="facebook.svg" alt="Facebook" class="w-8 md:w-10" />
         </a>
 
         <a
           href="https://www.instagram.com/nacongamers_es/?hl=es"
           target="_blank"
         >
-          <img
-            src="/pcch375/instagram.svg"
-            alt="Instagram"
-            class="w-8 md:w-10"
-          />
+          <img src="instagram.svg" alt="Instagram" class="w-8 md:w-10" />
         </a>
 
         <a href="https://twitter.com/NacongamingES?" target="_blank">
-          <img src="/pcch375/x.svg" alt="Twitter" class="w-8 md:w-10" />
+          <img src="x.svg" alt="Twitter" class="w-8 md:w-10" />
         </a>
 
         <a href="https://www.youtube.com/@NacongamingEspana" target="_blank">
-          <img src="/pcch375/youtube.svg" alt="YouTube" class="w-8 md:w-10" />
+          <img src="youtube.svg" alt="YouTube" class="w-8 md:w-10" />
         </a>
       </div>
       <div>
-        <img src="/pcch375/naconlogo.svg" alt="RIG" class="w-16 md:w-24" />
+        <img src="naconlogo.svg" alt="RIG" class="w-16 md:w-24" />
       </div>
     </div>
 
     <div>
       <p>
-        Desarrollado por SITELICON ECOMMERCE SERVICES 2024 | Todos los derechos
+        Desarrollado por SITELICON ECOMMERCE SERVICES 2025 | Todos los derechos
         reservados.
       </p>
     </div>
