--- a/src/components/FirstVideo.astro
+++ b/src/components/FirstVideo.astro
@@ -14,7 +14,7 @@ import LongSection from './LongSection.astro';
           autoplay
           muted
           playsinline
-          src="/pcch375/elevacion.mp4"
+          src="elevacion.mp4"
           class="w:1/2 md:w-4/5 lg:w-1/3 rounded-3xl"></video>
         <div class="flex flex-col gap-2 xl:gap-4 max-w-4xl text-black">
           <h2
@@ -34,7 +34,7 @@ import LongSection from './LongSection.astro';
           autoplay
           muted
           playsinline
-          src="/pcch375/inclinacion.mp4"
+          src="inclinacion.mp4"
           class="w:1/2 md:w-4/5 lg:w-1/3 rounded-3xl lg:order-2"></video>
         <div class="flex flex-col gap-2 xl:gap-4 max-w-4xl text-black">
           <h2
