--- a/src/components/SecondGeneralDemo.astro
+++ b/src/components/SecondGeneralDemo.astro
@@ -1,10 +1,10 @@
 ---
-import LongSection from './LongSection.astro';
-import { generalDemoData } from '../data/general_demo';
+import LongSection from "./LongSection.astro";
+import { generalDemoData } from "../data/general_demo";
 ---
 
 <LongSection
-  title="LA PCCH-375 SE ADAPTA A TI"
+  title="LA PCCH-380 TRGB SE ADAPTA A TI"
   subtitle="Diseñada especialmente para ser tu mejor compañera en tu día a día"
   color="white"
   pt="pt-5 xl:pt-20"
@@ -15,6 +15,20 @@ import { generalDemoData } from '../data/general_demo';
       class="text-gray-100 flex flex-col lg:flex-row justify-around gap-10 xl:gap-24 py-10 px-5"
     >
       {
+        generalDemoData.map((product) => (
+          <div class="flex flex-col items-center gap-2">
+            <img
+              src={product.video}
+              class="rounded-2xl w-full max-w-lg md:max-w-md"
+            />
+            <div class="flex flex-col gap-2 w-3/4">
+              <p class="tracking-wide font-bold">{product.title}</p>
+              <p class="tracking-wide text-sm">{product.description}</p>
+            </div>
+          </div>
+        ))
+      }
+      <!-- {
         generalDemoData.map((product) => (
           <div class="flex flex-col items-center gap-2">
             <video
@@ -31,7 +45,7 @@ import { generalDemoData } from '../data/general_demo';
             </div>
           </div>
         ))
-      }
+      } -->
     </div>
   </article>
 
