--- a/src/components/Specifications.astro
+++ b/src/components/Specifications.astro
@@ -1,6 +1,6 @@
 ---
-import LongSection from './LongSection.astro';
-import { firstTable, specsImgs } from '../data/specifications.js';
+import LongSection from "./LongSection.astro";
+import { firstTable, specsImgs } from "../data/specifications.js";
 ---
 
 <LongSection
@@ -12,7 +12,7 @@ import { firstTable, specsImgs } from '../data/specifications.js';
 >
   <article
     slot="main"
-    class="text-black flex flex-col items-center justify-center gap-10 w-screen"
+    class="text-black flex flex-col items-center justify-center w-screen"
   >
     <div class="flex flex-col md:flex-row gap-10 pt-10">
       {
