--- a/src/components/ThirdSection.astro
+++ b/src/components/ThirdSection.astro
@@ -33,13 +33,13 @@ import LongSection from './LongSection.astro';
         autoplay
         loop
         muted
-        src="/pcch375/montajepcch375.mp4"
+        src="montajepcch375.mp4"
         class="hidden md:block rounded-2xl md:w-[90%] lg:w-[50%] object-center object-cover w-screen h-10/12"
       ></video>
 
       <video
         controls
-        src="/pcch375/montajepcch375.mp4"
+        src="montajepcch375.mp4"
         class="md:hidden rounded-3xl mb-4 py-2 h-[500px]"></video>
     </div>
   </article>
