[feat] new sections & updates

--- a/src/components/BuySection.astro
+++ b/src/components/BuySection.astro
@@ -4,7 +4,7 @@ import { buySectionData, productData } from "../data/buy_section";
 ---
 
 <LongSection
-  title="NACON PCCH-800 TRGB"
+  title="NACON PCCH-800"
   color="white"
   pt="pt-5"
   textSize="text-[40px]"
