--- a/src/components/FourthSection.astro
+++ b/src/components/FourthSection.astro
@@ -18,7 +18,7 @@ import LongSection from "./LongSection.astro";
       class="flex flex-col md:flex-row items-center justify-center pl-5 py-5 md:hidden"
     >
       <a href="fichaproducto.pdf" target="_blank" class="md:order-2">
-        <img src="fichaproducto.png" class="w-11/12 rounded-xl" />
+        <img src="fichaprgb.png" class="w-11/12 rounded-xl" />
       </a>
     </div>
 
@@ -26,12 +26,12 @@ import LongSection from "./LongSection.astro";
       class="hidden md:flex flex-col md:flex-row items-center justify-center md:justify-around md:pl-0 py-5 md:py-2"
     >
       <a href="fichaproducto.pdf" target="_blank">
-        <img src="fichaproducto.png" class="w-11/12 rounded-xl" />
+        <img src="fichaprgb.png" class="w-11/12 rounded-xl" />
       </a>
     </div>
   </article>
 
-  <!-- <div slot="footer" class="pb-10">
+  <div slot="footer" class="pb-10">
     <a
       class="border-[3px] backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white
        hover:text-black transition-colors"
@@ -39,7 +39,7 @@ import LongSection from "./LongSection.astro";
     >
       COMPRAR AHORA</a
     >
-  </div> -->
+  </div>
 
   <div
     slot="background"
