--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -20,7 +20,7 @@ import Section from "./Section.astro";
 
   <img
     slot="background"
-    src="pcch800trgbmain2.png"
-    class="flex object-center object-cover h-screen w-full"
+    src="800series.jpg"
+    class="flex object-center object-contain h-screen w-full"
   />
 </Section>
