--- a/src/components/SecondGeneralDemo.astro
+++ b/src/components/SecondGeneralDemo.astro
@@ -4,22 +4,25 @@ import { generalDemoData } from "../data/general_demo";
 ---
 
 <LongSection
-  title="LA PCCH-380 TRGB SE ADAPTA A TI"
+  title="ERGONOMIA PERSONALIZADA"
   subtitle="Diseñada especialmente para ser tu mejor compañera en tu día a día"
-  color="white"
+  color="black"
   pt="pt-5 xl:pt-20"
   textSize="text-[36px] xl:text-[40px]"
 >
   <article slot="main" class="flex flex-col items-center justify-center">
     <div
-      class="text-gray-100 flex flex-col lg:flex-row justify-around gap-10 xl:gap-24 py-10 px-5"
+      class="text-black flex flex-col lg:flex-row justify-around gap-10 xl:gap-24 py-10 px-5"
     >
       {
         generalDemoData.map((product) => (
           <div class="flex flex-col items-center gap-2">
-            <img
+            <video
               src={product.video}
               class="rounded-2xl w-full max-w-lg md:max-w-md"
+              muted
+              loop
+              autoplay
             />
             <div class="flex flex-col gap-2 w-3/4">
               <p class="tracking-wide font-bold">{product.title}</p>
@@ -49,18 +52,18 @@ import { generalDemoData } from "../data/general_demo";
     </div>
   </article>
 
-  <!-- <div slot="footer" class="pb-10">
+  <div slot="footer" class="pb-10">
     <a
-      class="border-[3px] backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white hover:text-black transition-colors"
+      class="border-[3px] border-black backdrop-blur-sm text-sm rounded font-bold text-black px-12 py-2 inline-block hover:bg-black hover:text-white transition-colors"
       href="#buysection"
     >
-      COMPRAR AHORA</a
-    >
-  </div> -->
+      COMPRAR AHORA
+    </a>
+  </div>
 
   <div
     slot="background"
-    class="bg-gradient-to-r from-zinc-950 to-zinc-900 object-center object-cover h-full w-full"
+    class="bg-gradient-to-b from-zinc-100 to-zinc-300 object-center object-cover h-full w-full"
   >
   </div>
 </LongSection>
