--- a/src/components/ThirdSection.astro
+++ b/src/components/ThirdSection.astro
@@ -44,7 +44,7 @@ import LongSection from './LongSection.astro';
     </div>
   </article>
 
-  <!-- <div slot="footer" class="pb-10">
+  <div slot="footer" class="pb-10">
     <a
       class="border-[3px] backdrop-blur-sm text-sm rounded font-medium text-white px-12 py-2 inline-block hover:bg-white
        hover:text-black transition-colors"
@@ -52,7 +52,7 @@ import LongSection from './LongSection.astro';
     >
       COMPRAR AHORA</a
     >
-  </div> -->
+  </div>
 
   <div
     slot="background"
