--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,10 @@ import FirstVideo from "../components/FirstVideo.astro";
 import SecondGeneralDemo from "../components/SecondGeneralDemo.astro";
 import FourthSection from "../components/FourthSection.astro";
 import Specifications from "../components/Specifications.astro";
+import Gallery from "../components/Gallery.astro";
+import ThirdGeneralDemo from "../components/ThirdGeneralDemo.astro";
+import FifthSection from "../components/FifthSection.astro";
+import SecondGallery from "../components/SecondGallery.astro";
 ---
 
 <Layout title="NAC-PCCH-375">
@@ -18,9 +22,9 @@ import Specifications from "../components/Specifications.astro";
     <div class="lg:snap-center">
       <HeroSection />
     </div>
-    <div class="lg:snap-center">
+    <!-- <div class="lg:snap-center">
       <FirstSection />
-    </div>
+    </div> -->
     <!-- <div class="lg:snap-center">
       <SecondSection />
     </div> -->
@@ -34,7 +38,19 @@ import Specifications from "../components/Specifications.astro";
       <SecondGeneralDemo />
     </div>
     <div class="lg:snap-center">
+      <ThirdGeneralDemo />
+    </div>
+    <div class="lg:snap-center">
+      <Gallery />
+    </div>
+    <div class="lg:snap-center">
       <FourthSection />
+    </div>
+    <div class="lg:snap-center">
+      <SecondGallery />
+    </div>
+    <div class="lg:snap-center">
+      <FifthSection />
     </div>
     <div class="lg:snap-center">
       <Specifications />
